--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "scripts": {
     "build": "nuxt build",
+    "deploy": "gh-pages -d dist",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
@@ -11,11 +12,13 @@
   },
   "dependencies": {
     "@nuxt/ui": "^2.17.0",
+    "@nuxtjs/color-mode": "^3.4.2",
     "@nuxtjs/tailwindcss": "^6.12.0",
     "@nuxtjs/toast": "^3.3.1",
     "buffer": "^6.0.3",
     "codemirror-editor-vue3": "^2.7.0",
     "crypto-js": "^4.2.0",
+    "gh-pages": "^6.1.1",
     "jwk-to-pem": "^2.0.5",
     "nuxt": "^3.11.2",
     "vue": "^3.4.27",
