--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@nuxtjs/color-mode": "^3.4.2",
     "@nuxtjs/tailwindcss": "^6.12.0",
     "@nuxtjs/toast": "^3.3.1",
+    "@pinia/nuxt": "^0.5.1",
     "buffer": "^6.0.3",
     "codemirror-editor-vue3": "^2.7.0",
     "crypto-js": "^4.2.0",
     "gh-pages": "^6.1.1",
     "jwk-to-pem": "^2.0.5",
     "nuxt": "^3.11.2",
+    "pinia": "^2.1.7",
     "vue": "^3.4.27",
     "vue-router": "^4.3.2",
     "vue3-toastify": "^0.2.2"
