--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "@nuxtjs/tailwindcss": "^6.12.0",
     "@nuxtjs/toast": "^3.3.1",
     "@pinia/nuxt": "^0.5.1",
+    "@types/jwk-to-pem": "^2.0.3",
     "buffer": "^6.0.3",
-    "codemirror-editor-vue3": "^2.7.0",
-    "crypto-js": "^4.2.0",
     "gh-pages": "^6.1.1",
+    "jose": "^5.6.3",
     "jwk-to-pem": "^2.0.5",
     "nuxt": "^3.11.2",
     "pinia": "^2.1.7",
